Fix scrolling of days in iOS Safari
Scrolling of the main screen was broken in iOS Safari. Switching
approach to make use of flex-grow, shrink and flex-basis worked better.

http://stackoverflow.com/questions/39705876/css-scroll-issue-with-flexbox-and-max-height

--- a/src/Week.css
+++ b/src/Week.css
@@ -16,6 +16,7 @@
   position: relative;
   border-top: 1px solid #ccc;
   overflow: auto;
+  flex: 1 1 auto;
   -webkit-overflow-scrolling: touch;
 }
 
